plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.6'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.example'
version = '0.1.0'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'commons-codec:commons-codec:1.16.0'

    // JWT & OAuth2 support (resource server + JOSE/JWT)
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:3.2.6'
    implementation 'com.nimbusds:nimbus-jose-jwt:9.31'

    implementation 'com.nimbusds:nimbus-jose-jwt:9.31'

    implementation 'org.postgresql:postgresql'
    implementation 'org.flywaydb:flyway-core'

    implementation 'org.springframework.security:spring-security-crypto'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.testcontainers:testcontainers'
    testImplementation 'org.testcontainers:postgresql'
    implementation 'org.springframework.security:spring-security-crypto:6.2.4'
    // [CB-SEC] Upgraded from 1.78 to 1.79 to fix CVE-2026-0636 (LDAP injection vulnerability, GHSA-c3fc-8qff-9hwx)
    implementation 'org.bouncycastle:bcprov-jdk18on:1.79'
}

tasks.named('test') {
    useJUnitPlatform()
}
